updates to intro

--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -1,5 +1,5 @@
 %% For double-blind review submission
-\documentclass[acmlarge,review,anonymous]{acmart}\settopmatter{printfolios=true}
+\documentclass[acmlarge,anonymous]{acmart}\settopmatter{printfolios=true}
 %% For single-blind review submission
 %\documentclass[acmlarge,review]{acmart}\settopmatter{printfolios=true}
 %% For final camera-ready submission
@@ -148,7 +148,7 @@ morekeywords={module, @@deriving, not, : , /\\}
 \begin{document}
 
 %% Title information
-\title[DaLi]{DaLi: Database as a Library}         %% [Short Title] is optional;
+\title[]{DaLi: Functional Replicated Datatypes}         %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
 %\titlenote{with title note}             %% \titlenote is optional;
@@ -270,9 +270,9 @@ Text of abstract \ldots.
 
 \input{intro}
 
-\input{motivation}
+% \input{motivation}
 
-\input{semantics}
+%\input{semantics}
 
 %% Acknowledgments
 % \begin{acks}                            %% acks environment is optional
