--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -66,10 +66,12 @@
 \newcommand{\sempreceq}{\preceq_{\circ}}
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 \newcommand{\mbleto}{\rightsquigarrow_m}
+\newcommand{\drawsome}{{\sf DrawSome}}
 
 % New colors
 %------------
 \definecolor{Bittersweet}{rgb}{1.0, 0.44, 0.37}
+\definecolor{MidnightBlue}{rgb}{0.0, 0.2, 0.4}
 
 % Listings Code
 %---------------
@@ -271,6 +273,8 @@ Text of abstract \ldots.
 \input{intro}
 
 \input{motivation}
+
+\input{model}
 
 \input{semantics}
 
