--- a/paper/model.tex
+++ b/paper/model.tex
@@ -10,7 +10,7 @@
     val get_current_version: unit -> 'a 'a t
     val with_init_version_do: 'a -> 'a 'b t -> 'b
     val fork_version : 'a 'b t -> 'a unit t
-    val sync ()_next_version: unit -> ?v:'a -> 'a 'a t
+    val sync_next_version: unit -> ?v:'a -> 'a 'a t
   end
   \end{ocaml}
 
@@ -113,17 +113,17 @@ monad's \C{get}; it returns the versioned state encapsulated by the
 monad. \C{with\_init\_version\_do} runs a monadic computation against
 a given initial version and returns the result. \C{fork\_version}
 returns a computation that forks a new concurrent version from the
-current version, and runs the given monadic computation async ()hronously
-against the forked version.  The semantics of \C{sync ()\_next\_version}
-(simply called \C{sync ()}) is somewhat involved: the function accepts a
-\emph{proposal} for the next version of the state, where \C{next} is
-defined w.r.t the current version, and returns (via a monad) the
-actual next version, which becomes the current version for rest of the
-computation.  The next version is created by merging the proposal with
-a subset of concurrent versions that became available since the last
-merge or fork. Thus, \C{sync ()} effectively lets a computation sync
-() with a subset of concurrent computations and obtain their latest
-updates.
+current version, and runs the given monadic computation asynchronously
+against the forked version.  The semantics of \C{sync\_next\_version}
+(simply called \C{sync}) is somewhat involved: the function accepts
+a \emph{proposal} for the next version of the
+state, where \C{next} is defined w.r.t the current version, and
+returns (via a monad) the actual next version, which becomes the
+current version for rest of the computation.  The next version is
+created by merging the proposal with a subset of concurrent versions
+that became available since the last merge or fork. Thus, \C{sync}
+effectively lets a computation sync with a subset of concurrent
+computations and obtain their latest updates.
 
 \begin{figure}
 \centering
@@ -229,4 +229,24 @@ version and the return value of \C{sync}. The subsequent \C{sync}
 operations from Bob and Cheryl propose no new versions, hence simply
 obtain Alice's $C_1'$ as next versions.
 
+The \drawsome example demonstrates the utility of mergeable data types
+and the \name programming model in building concurrent applications
+with conceptual sharing of state. This example, however, implicitly
+makes certain assumptions about the model and the underlying system,
+such as the existence of a single least common ancestor (LCA) for any
+pair of versions, the ability to access a previous version on any
+branch, and mergeability of any two concurrent versions. Enforcing
+these guarantees in a fully decentralized distributed setting requires
+addressing non-trivial theoretical challenges described in the next
+section. Unlike the canvas, the process of writing merge functions for
+data types with non-trivial invariants could be quite involved. The
+later sections describe a principled approach to derive a merge
+function for a data type given its invariants. Like \C{Canvas.merge},
+merge functions often need to compare multiple versions of a data type
+for structural equality, which, when performed naively, incurs cost
+linear in the size of versions. The representation of a versioned data
+type in \name is optimized for performing comparisons such that
+structural equality can be determined in constant time. Such
+engineering details, which contribute to the practicality of our
+programming model are also discussed in subsequent sections.
 
