--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -66,7 +66,7 @@
 \newcommand{\sempreceq}{\preceq_{\circ}}
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 \newcommand{\mbleto}{\rightsquigarrow_m}
-\newcommand{\drawsome}{{\sf DrawSome}\xspace}
+\newcommand{\drawsome}{{\sf Canvas}\xspace}
 
 % New colors
 %------------
